feat(govdata): casing fix, Python connection docs, ETL and schema updates
- GovDataDriver: add caseSensitive=false for case-insensitive identifier matching
- RefreshablePartitionedParquetTable: guard empty-files DuckDB+Hive path
- docs: add Python connection guide
- edu: NAEP transformer and API classes
- lands: FIA metrics transformer
- health/edu/lands schema YAML updates
- scripts: parallel worker updates and health recovery scripts
- ETL model templates for edu and health
- Schema docs updates across multiple domains

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>